# FALL-DETECTION-AND-ALERT-DEVICE-FOR-THE-ELDERLY

./: .gitignore  PCB_DA1.PcbDoc  PCB_DA1.PrjPcb  PCB_DA1.PrjPcbStructure  PCB_DA1.REP  README.md  Sch_DA1.SchDoc  sdkconfig
__Previews/: Sch_DA1.SchDocPreview
components/fall_detection/: CMakeLists.txt  fall_detection.c  fall_detection.h
components/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h  mpu6050_constants.h  roll_pitch.c  roll_pitch.h
components/telegram/: CMakeLists.txt  telegram.c  telegram.h  telegram_messages.h
components/webserver/: CMakeLists.txt  webserver.c  webserver.h
components/webui/: CMakeLists.txt  app.js  index.html  style.css  webui.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: CMakeLists.txt  CODE.c  Kconfig.projbuild
report/: Chuong1_2.md  Chuong3_PhanCung.md  Chuong4_PhanMem.md  Chuong5_6.md  DacTaHeThong.md
